# bright

./: Cargo.toml  PKGBUILD  README.md
.github/workflows/: nightly.yml  release.yml
src/: cli.rs  config.rs  main.rs  util.rs
