[package]
name = "bright"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1", features = ["rt", "time", "macros"]}

brightness = {version = "0"}

futures = {version = "0"}

chrono = {version = "0", features = ["serde"]}

anyhow = {version = "1"}

serde = {version = "1", features = ["derive"] }

toml = "0"

shellexpand = "2"

clap = {version = "4", features = ["derive"]}

# lazy_static = {version = "1"}

[profile.release]

opt-level = "s"

lto = true

panic = "abort"

# options["none", "debuginfo", "symbols", true, false]
# the default is "none", true = "symbols", false = "none"
strip = true
